# dream-crates

./: .gitignore  AGENTS.md  AGENT_INSTRUCTIONS.md  PLAN.md  README.md  RELEASE_CHECKLIST.md  docker-compose.yml  testing.md
.beads/: .gitignore  issues.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.beads/hooks/: post-checkout  post-merge  pre-commit
.codex/environments/: environment.toml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/services/: apns.py  channel_catalog.py  device_notifications.py  offline_media.py  push.py  resolver.py  store.py  tagging.py  youtube_poller.py  ytdlp.py
backend/scripts/: resolve_media_url.py  run-tests.sh
backend/tests/: test_api.py  test_apns.py  test_offline_media.py  test_poller.py  test_push.py  test_resolver.py  test_tagger.py  test_ytdlp.py
deploy/debian/: README.md  dream-crates.env.example
deploy/debian/nginx/: dream-crates.conf
deploy/debian/systemd/: dream-crates-api.service  dream-crates-poller.service  dream-crates-poller.timer
deploy/docker/: README.md  dream-crates.env.example
ios/StudioSample/: README.md  project.yml
ios/StudioSample/StudioSample.xcodeproj/: project.pbxproj
ios/StudioSample/dream crates.xcodeproj/: project.pbxproj
ios/StudioSample/scripts/: build-device.sh  install-device.sh  list-destinations.sh  test-device.sh  test-simulator.sh
scripts/: api-smoke.sh  doctor.sh
(+35 files in other folders)
